--- a/pages/index.css
+++ b/pages/index.css
@@ -4,5 +4,6 @@
   margin: auto;
   font-size: 16px;
   line-height: 20px;
-  font-family: "Inter", Arial, Helvetica, sans-serif
+  font-family: "Inter", Arial, Helvetica, sans-serif;
+  background-color: #ffffff;
 }
