--- a/pages/index.css
+++ b/pages/index.css
@@ -63,7 +63,7 @@ flex-direction: column;
 }
 
 .header__span-accent{
-  font-family: Noto "Serif";
+  font-family: "Noto Serif";
   font-style: italic;
   font-weight: normal;
   font-size: 58px;
@@ -114,3 +114,12 @@ color: #2F80ED;
   margin-top: auto;
   margin-bottom: auto;
 }
+
+<p>
+    <a href="https://jigsaw.w3.org/css-validator/check/referer">
+        <img style="border:0;width:88px;height:31px"
+            src="https://jigsaw.w3.org/css-validator/images/vcss-blue"
+            alt="Valid CSS!" />
+    </a>
+</p>
+      
