--- a/pages/index.css
+++ b/pages/index.css
@@ -115,3 +115,33 @@ color: #2F80ED;
   margin-bottom: auto;
 }
 
+.content{
+  background-image: url(../images/background_recipes.svg);
+  background-color: #0a2750;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.recipes__title{
+  color: #ffffff;
+  padding-top: 100px;
+  padding-left: 80px;
+  max-width: 580px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 52px;
+}
+
+.recipes__subtitle{
+  max-width: 438px;
+  color: #ffffff;
+  padding-top: 24px;
+  padding-left: 80px;
+  font-family: "Noto Serif";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+line-height: 30px;
+}
