--- a/pages/index.css
+++ b/pages/index.css
@@ -120,6 +120,7 @@ color: #2F80ED;
   background-color: #0a2750;
   background-position: center;
   background-repeat: no-repeat;
+
 }
 
 .recipes__title{
@@ -144,4 +145,39 @@ color: #2F80ED;
   font-weight: normal;
   font-size: 20px;
 line-height: 30px;
+}
+
+.recipes__videos{
+  display: flex;
+    justify-content: center;
+    column-gap: 40px;
+    margin-top: 80px;
+    padding-bottom: 215px;
+
+}
+
+.recipes__video-item{
+  display: flex;
+  column-gap: 24px;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+iframe{
+  width: 480px;
+    height: 273px;
+    border: 0;
+}
+
+.recipes__video-caption {
+  margin-top: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  color: #ffffff;
 }
