--- a/pages/index.css
+++ b/pages/index.css
@@ -206,7 +206,7 @@ font-style: normal;
 font-weight: 500;
 font-size: 44px;
 line-height: 52px;
-margin: 0 0 100 0;
+margin: 100px 0px 80px 0px;
 }
 
 .form{
