--- a/pages/index.css
+++ b/pages/index.css
@@ -1,299 +1,8 @@
-.page{
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: auto;
-  font-size: 16px;
-  line-height: 20px;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-  background-color: #ffffff;
-}
-
-.header{
-  height: 100vh;
-  max-height: 800px;
-  min-height: 720px;
-  box-sizing: border-box;
-  background-color: #ffffff;
-  background-image: url(../images/background_header.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  display:flex;
-  flex-direction: column;
-
-
-}
-
-.nav{
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-color: #000000;
-  font-family: "Inter";
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 20px;
-}
-
-.header__logo{
-  padding-left: 30px;
-   padding-top: 30px;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__links{
-  display: flex;
-  flex-direction: row;
-  padding-top: 30px;
-  padding-right: 80px;
-  gap: 20px;
-  list-style-type: none;
-
-
-
-}
-
-.header__content{
-display: flex;
-flex-direction: column;
-}
-
-
-.header__title{
-  padding-left:80px;
-  padding-top: 183px;
-  max-width: 708px;
-}
-
-.header__span-accent{
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 58px;
-line-height: 72px;
-color: #2F80ED;
-}
-
-.header__description{
-  max-width: 683px;
-  padding-left: 80px;
-  padding-top: 28px;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image{
-  position: absolute;
-  width: 646px;
-  height: 568px;
-  right: 5px;
-  top: 124px;
-}
-
-.header__footer{
-  margin-top: auto;
-    padding-bottom: 40px;
-    padding-left: 80px;
-    margin-right: 80px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
-    box-sizing: border-box;
-    z-index: 1;
-
-
-}
-
-.header__paragraph {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
-.content{
-  background-image: url(../images/background_recipes.svg);
-  background-color: #0a2750;
-  background-position: center;
-  background-repeat: no-repeat;
-
-}
-
-.recipes__title{
-  color: #ffffff;
-  padding-top: 100px;
-  padding-left: 80px;
-  max-width: 580px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle{
-  max-width: 438px;
-  color: #ffffff;
-  padding-top: 24px;
-  padding-left: 80px;
-  font-family: "Noto Serif";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-line-height: 30px;
-}
-
-.recipes__videos{
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-    gap: 40px;
-    margin-top: 80px;
-    padding-bottom: 215px;
-
-}
-
-.recipes__video-item{
-  display: flex;
-  column-gap: 24px;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-iframe{
-  width: 480px;
-    height: 273px;
-    border: 0;
-}
-
-.recipes__video-caption {
-  margin-top: 24px;
-  display: flex;
-  flex-direction: column;
-  justify-self: flex-end;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  color: #ffffff;
-}
-
-.reservation{
-  color:#000000;
-  background-color:#D9E7FF;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  display: flex;
-justify-content: center;
-align-items: center;
-}
-
-.reservation__title{
-  font-family: Inter;
-font-style: normal;
-font-weight: 500;
-font-size: 44px;
-line-height: 52px;
-margin: 0px auto 80px;
-}
-
-.form{
-  max-width: 385px;
-}
-.form__fieldset {
-  border: 0;
-  padding: 0;
-  margin: 0;
-}
-
-.reservation__form{
-  max-width: 385px;
-  padding: 0;
-  margin: 0;
-  margin-bottom: 120px;
-  }
-
-  .form__input{
-    height: 60px;
-    margin: 0 0 32px;
-    box-sizing: border-box;
-    width: 100%;
-    padding: 15px 20px;
-    font-family: Inter;
-font-style: normal;
-font-weight: normal;
-font-size: 20px;
-line-height: 30px;
-border-radius: 4px;
-border-color: #838383;
-  }
-
-  .form__input::placeholder {
-    color: #838383;
-  }
-
-.form__label{
-  display: block;
-  margin-bottom:   8px;
-  font-family: Inter;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 20px;
-}
-
-.form__button{
-  height: 60px;
-  max-width: 385px;
-  width: 100%;
-  padding: 0 100px;
-  margin-bottom: 32px;
-  font-family: Inter;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 20px;
-background-color: #2f80ed;
-color: #ffffff;
-border-radius: 4px;
-}
-
-.form__button:hover{
-  opacity: 70%;
-}
-
-.form__fieldset_el_center {
-  display: flex;
-  justify-content: center;
-}
-
-.form__lable_direction_right {
-  display: inline;
-  margin-left: 12px;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  width: 20px;
-  height: 20px;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-.form__checkbox:checked{
-  background-color: #2F80ED;
-  background-image: url(../images/check.svg);
-}
-
+@import url(../vendor/normalize.css);
+@import url(../blocks/page.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/footer.css);
