--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,4 +1,4 @@
-.content{
+.recipes{
   background-image: url(../images/background_recipes.svg);
   background-color: #0a2750;
   background-position: center;
