--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -1,4 +1,4 @@
-nav{
+.nav{
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -8,6 +8,7 @@ font-style: normal;
 font-weight: 500;
 font-size: 16px;
 line-height: 20px;
+
 }
 
 
@@ -20,6 +21,9 @@ line-height: 20px;
   gap: 20px;
   list-style-type: none;
 
+}
 
-
+.nav__link{
+  color: #000000;
+  text-decoration: none;
 }
