--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -6,6 +6,7 @@
   background-position: center;
   background-size: cover;
   display: flex;
+  flex-direction: column;
 justify-content: center;
 align-items: center;
 }
@@ -17,6 +18,7 @@ font-weight: 500;
 font-size: 44px;
 line-height: 52px;
 margin: 0px auto 80px;
+padding-top: 100px;
 }
 
 .reservation__form{
