--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -1,9 +1,9 @@
+
 .recipes{
   background-image: url(../images/background_recipes.svg);
   background-color: #0a2750;
   background-position: center;
   background-repeat: no-repeat;
-
 }
 
 .recipes__title{
@@ -16,6 +16,7 @@
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
+  margin: 0;
 }
 
 .recipes__subtitle{
